# dvrmanager

./: pyproject.toml
dvrmanager/: __main__.py  application.py  config.py  fs.py  logs.py  settings.py  window.py
dvrmanager/ui/: export_item_widget.py  export_item_widget_form.py  export_item_widget_form.ui  main_window.py  main_window_form.py  main_window_form.ui  window.py  window.ui
